# Digital-Human

./: .bandit.yml  .cursorignore  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  ARCHITECTURE_PROPOSAL.md  CLAUDE.md  COMPLETE_PIPELINE_EXAMPLE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  MIGRATION_GUIDE.md  Makefile  README.md  REFACTORING_SUMMARY.md  app.py  docker-compose.yml  livekit.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: claude.yml  pylint.yml
assets/: faq.md
docs/: README.md  REFACTORING_OVERVIEW.md  api-reference.md  architecture.md  branch-rule.md  deployment.md  development.md  documents.md  environment-setup.md
scripts/: README.md  docker_run.sh  quick_start.sh  run_musetalk.sh  run_ultralight.sh  run_wav2lip.sh  run_with_validation.sh  setup_dev.sh  verify_setup.sh
src/: __init__.py  app.py
src/api/: server.py
src/app/: main.py
src/config/: config_examples.json
src/core/: __init__.py  asr_base.py  base_real.py  context.py  exceptions.py  frames.py  pipeline.py  processor.py
src/livekit_asr_agent/: __init__.py  agent.py  audio.py  config.py  transcriber.py  vad.py
src/processors/: __init__.py
src/services/: llm.py  real.py  tts.py  webrtc.py
src/transports/: __init__.py  base_transport.py
web/: chat.html  client.js  dashboard.html  echo.html  echoapi.html  rtcpush.html  rtcpushapi-asr.html  rtcpushapi.html  rtcpushchat.html  webrtc.html  webrtcapi-asr.html  webrtcapi-custom.html  webrtcapi.html  webrtcchat.html
(+47 files in other folders)
