[project]
name = "digital-human"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "aiohttp>=3.11.0",
    "aiohttp-cors>=0.8.1",
    "aiortc>=1.13.0",
    "av>=16.0.1",
    "configargparse>=1.7.1",
    "diffusers>=0.34.0",
    "edge-tts>=7.2.0",
    "einops>=0.8.1",
    "face-alignment>=1.4.1",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.2",
    "flask-sockets>=0.2.1",
    "imageio-ffmpeg>=0.6.0",
    "json5>=0.12.1",
    "librosa>=0.11.0",
    "lpips==0.1.3",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy>=2.2.0",
    "omegaconf>=2.3.0",
    "openai>=2.14.0",
    "opencv-python>=4.12.0",
    "opencv-python-headless>=4.11.0",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pymcubes>=0.1.6",
    "python-speech-features>=0.6",
    "regex>=2025.11.3",
    "resampy>=0.4.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.0",
    "soundfile==0.12.1",
    "tensorboardx>=2.6.4",
    "torch>=2.7.1",
    "torch-ema>=0.3",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.0",
    "transformers>=4.55.0",
    "trimesh>=4.10.1",
    "websockets>=12.0",
]
[tool.uv]
link-mode = "copy"
